// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Component should allow custom class names 1`] = `
<div>
  <button
    class="db-link db-link--primary db-link--icon my-custom-class"
    data-testid="button"
    type="button"
  >
    <span>
      My link 15
    </span>
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render a custom icon 1`] = `
<div>
  <a
    class="db-link db-link--primary db-link--icon"
    data-testid="link"
    href="/"
  >
    <svg
      class="db-icon"
      height="24"
      role="img"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 5c.564 0 1.01.446 1.01 1.01v4.98h4.98c.564 0 1.01.446 1.01 1.01 0 .564-.446 1.01-1.01 1.01h-4.98v4.98c0 .564-.446 1.01-1.01 1.01-.564 0-1.01-.446-1.01-1.01v-4.98H6.01C5.446 13.01 5 12.564 5 12c0-.564.446-1.01 1.01-1.01h4.98V6.01c0-.564.446-1.01 1.01-1.01z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <span>
      My link 14
    </span>
  </a>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render a link 1`] = `
<div>
  <a
    class="db-link db-link--primary db-link--icon"
    data-testid="link"
    href="/"
  >
    <span>
      My link 1
    </span>
    <svg
      class="db-link__icon-arrow"
      height="24"
      role="img"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 12c0 .563.438 1 1 1h11.594l-4.282 4.281A.998.998 0 0012 18c0 .438.375 1 1.031 1 .25 0 .5-.094.688-.281l6-6A1 1 0 0020 12c.031-.25-.078-.515-.281-.719l-6-6A1.026 1.026 0 0013.03 5C12.47 5 12 5.469 12 6c0 .281.109.515.313.719L16.593 11H5c-.563 0-1 .438-1 1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </a>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render a link if both href and onClick are defined 1`] = `
<div>
  <a
    class="db-link db-link--primary db-link--icon"
    data-testid="link"
    href="/"
  >
    <span>
      My link 16
    </span>
    <svg
      class="db-link__icon-arrow"
      height="24"
      role="img"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 12c0 .563.438 1 1 1h11.594l-4.282 4.281A.998.998 0 0012 18c0 .438.375 1 1.031 1 .25 0 .5-.094.688-.281l6-6A1 1 0 0020 12c.031-.25-.078-.515-.281-.719l-6-6A1.026 1.026 0 0013.03 5C12.47 5 12 5.469 12 6c0 .281.109.515.313.719L16.593 11H5c-.563 0-1 .438-1 1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </a>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render a link when \`href\` is not set 1`] = `
<div>
  <button
    class="db-link db-link--primary db-link--icon"
    data-testid="button"
    type="button"
  >
    <span>
      My link 7
    </span>
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render a link with additional attributes 1`] = `
<div>
  <button
    class="db-link db-link--primary db-link--icon"
    data-testid="button"
    title="Click me"
    type="button"
  >
    <span>
      My link 5
    </span>
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render a link with additional classes 1`] = `
<div>
  <button
    class="db-link db-link--primary db-link--icon my-class"
    data-testid="button"
    type="button"
  >
    <span>
      My link 6
    </span>
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render a mixed link 1`] = `
<div>
  <button
    class="db-link db-link--mixed db-link--icon"
    data-testid="button"
    type="button"
  >
    <span>
      My link 4
    </span>
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render a secondary link 1`] = `
<div>
  <button
    class="db-link db-link--secondary db-link--icon"
    data-testid="button"
    type="button"
  >
    <span>
      My link 3
    </span>
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render a submit link 1`] = `
<div>
  <button
    class="db-link db-link--primary db-link--icon"
    data-testid="button"
    type="submit"
  >
    <span>
      My link 2
    </span>
  </button>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render a the icon on the left side 1`] = `
<div>
  <a
    class="db-link db-link--primary db-link--icon"
    data-testid="link"
    href="/"
  >
    <svg
      class="db-link__icon-arrow"
      height="24"
      role="img"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.005 12c0-.563-.437-1-1-1H7.412l4.28-4.281A.998.998 0 0012.006 6c0-.438-.375-1-1.03-1a.97.97 0 00-.688.281l-6 6a.975.975 0 00-.277.611L4.005 12c-.03.25.078.515.282.719l6 6c.187.187.468.281.687.281.563 0 1.031-.469 1.031-1a.981.981 0 00-.312-.719L7.412 13h11.593c.563 0 1-.438 1-1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <span>
      My link 12
    </span>
  </a>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render a the icon on the right side 1`] = `
<div>
  <a
    class="db-link db-link--primary db-link--icon"
    data-testid="link"
    href="/"
  >
    <span>
      My link 13
    </span>
    <svg
      class="db-icon"
      height="24"
      role="img"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22h12a3 3 0 003-3v-4c0-.563-.438-1-1-1-.563 0-1 .438-1 1v4c0 .563-.438 1-1 1H6c-.563 0-1-.438-1-1v-4c0-.563-.438-1-1-1-.563 0-1 .438-1 1v4a3 3 0 003 3zm6-6c.25 0 .531-.093.719-.28l3.969-3.992a.902.902 0 00.312-.717c0-.53-.438-.966-1-.966-.25 0-.531.093-.719.28L13 12.601V2.998C13 2.437 12.531 2 12 2c-.563 0-1 .437-1 .998V12.6l-2.281-2.276a1.102 1.102 0 00-.719-.28c-.563 0-1 .436-1 .997 0 .25.094.5.313.686l3.968 3.991c.188.188.469.281.719.281z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </a>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render an download link anchor when \`href\` is set 1`] = `
<div>
  <a
    class="db-link db-link--primary db-link--icon"
    data-testid="link"
    href="/"
  >
    <svg
      class="db-icon"
      height="24"
      role="img"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22h12a3 3 0 003-3v-4c0-.563-.438-1-1-1-.563 0-1 .438-1 1v4c0 .563-.438 1-1 1H6c-.563 0-1-.438-1-1v-4c0-.563-.438-1-1-1-.563 0-1 .438-1 1v4a3 3 0 003 3zm6-6c.25 0 .531-.093.719-.28l3.969-3.992a.902.902 0 00.312-.717c0-.53-.438-.966-1-.966-.25 0-.531.093-.719.28L13 12.601V2.998C13 2.437 12.531 2 12 2c-.563 0-1 .437-1 .998V12.6l-2.281-2.276a1.102 1.102 0 00-.719-.28c-.563 0-1 .436-1 .997 0 .25.094.5.313.686l3.968 3.991c.188.188.469.281.719.281z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <span>
      My link 9
    </span>
  </a>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render an external link anchor when \`href\` starts with http 1`] = `
<div>
  <a
    class="db-link db-link--primary db-link--icon"
    data-testid="link"
    href="http://www.bahn.de/"
  >
    <span>
      My link 10
    </span>
    <svg
      class="db-link__icon-arrow"
      height="24"
      role="img"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.031 18a.953.953 0 00.657-.281L16 9.406V15c0 .594.469 1.031 1 1.031s1-.468 1-1.031V6.906C18 6.375 17.531 6 17 6H9c-.594 0-1 .469-1 1 0 .5.469 1 1 1h5.594l-8.375 8.375c-.157.156-.219.406-.219.594C6 17.562 6.438 18 7.031 18z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </a>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render an external link anchor when \`href\` starts with https 1`] = `
<div>
  <a
    class="db-link db-link--primary db-link--icon"
    data-testid="link"
    href="https://www.bahn.de/"
  >
    <span>
      My link 11
    </span>
    <svg
      class="db-link__icon-arrow"
      height="24"
      role="img"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.031 18a.953.953 0 00.657-.281L16 9.406V15c0 .594.469 1.031 1 1.031s1-.468 1-1.031V6.906C18 6.375 17.531 6 17 6H9c-.594 0-1 .469-1 1 0 .5.469 1 1 1h5.594l-8.375 8.375c-.157.156-.219.406-.219.594C6 17.562 6.438 18 7.031 18z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </a>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Link Component should render an internal link anchor when \`href\` is set 1`] = `
<div>
  <a
    class="db-link db-link--primary db-link--icon"
    data-testid="link"
    href="/"
  >
    <span>
      My link 8
    </span>
    <svg
      class="db-link__icon-arrow"
      height="24"
      role="img"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 12c0 .563.438 1 1 1h11.594l-4.282 4.281A.998.998 0 0012 18c0 .438.375 1 1.031 1 .25 0 .5-.094.688-.281l6-6A1 1 0 0020 12c.031-.25-.078-.515-.281-.719l-6-6A1.026 1.026 0 0013.03 5C12.47 5 12 5.469 12 6c0 .281.109.515.313.719L16.593 11H5c-.563 0-1 .438-1 1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </a>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;
